syntax = "proto3";

package ibc.lightclients.celestia.v1;

option go_package = "github.com/cosmos/ibc-go/v8/modules/light-clients/07-celestia;celestia";

import "ibc/lightclients/tendermint/v1/tendermint.proto";
import "gogoproto/gogo.proto";

// ClientState from Tendermint tracks the current validator set, latest height,
// and a possible frozen height.
message ClientState {
  option (gogoproto.goproto_getters) = false;

  ibc.lightclients.tendermint.v1.ClientState base_client = 1;
}
